--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/66baa8daf7.js" crossorigin="anonymous"></script>
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  <title>Frontend Mentor</title>
 </head>
 <body>
   <nav>
