--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" type="text/css" href="./src/css/stylesheet.css">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,9 +31,11 @@
 </div>
   <footer>
     <div id="socials">
-        <a href="#"><i id="fb" class="fa-brands fa-facebook-f"></i></a>
-        <a href="#"><i id="twit" class="fa-brands fa-twitter"></i></i></a>
-        <a href="#"><i id="ig" class="fa-brands fa-instagram"></i></i></a>
+      <ul>
+        <li><a href="#"><i id="fb" class="fa-brands fa-facebook-f"></i></a></li>
+        <li> <a href="#"><i id="twit" class="fa-brands fa-twitter"></i></a></li>
+        <li><a href="#"><i id="ig" class="fa-brands fa-instagram"></i></a></li>
+      </ul>
     </div>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
